--- a/src/views/study.html
+++ b/src/views/study.html
@@ -1,117 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Proff | Sua plataforma  de estudos online</title>
-    
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="stylesheet" href="/style/partials/header.css">
-    <link rel="stylesheet" href="/style/partials/forms.css">
-    <link rel="stylesheet" href="/style/partials/page-study.css">
-    
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/partials/header.css">
+  <link rel="stylesheet" href="/styles/partials/forms.css">
+  <link rel="stylesheet" href="/styles/partials/page-study.css">
+
+  <title>Proffy</title>
 </head>
+
 <body id="page-study">
 
-    <div id="container">
-  
-      <header class="page-header">
-        <div class="top-bar-container">
-          <a href="/">
-          <img src="/images/icons/back.svg" alt="Voltar"></a><img src="/images/logo.svg" alt="Proffy">
+  <div id="container">
+    <header class="page-header">
 
-        </div>
-        <div class="header-content">
-          <strong>Esses são os proffys disponiveis</strong>
-          
-<form id="search-teachers">
-    <div class="select-block">
-        <label for="subject">Matéria</label>
-        <select name="subject" id="subject">
-            <option value="" disabled="" hidden="">Selecione uma opção</option>
-            <option value="1">Artes</option>
-            <option value="2">Biologia</option>
-            <option value="3">Ciências</option>
-            <option value="4">Educação física</option>
-            <option value="5">Física</option>
-            <option value="6">Geografia</option>
-            <option value="7">História</option>
-            <option value="8">Matemática</option>
-            <option value="9">Português</option>
-            <option value="10">Química</option>
-        </select>
-    </div>
-    <div class="select-block">
-        <label for="weekday">Dia da semana</label>
-        <select name="weekday" id="weekday">
-            <option value="" disabled="" hidden="">Selecione uma opção</option>
-            <option value="0">Domingo</option>
-            <option value="1">Segunda-feira</option>
-            <option value="2">Terça-feira</option>
-            <option value="3">Quarta-feira</option>
-            <option value="4">Quinta-feira</option>
-            <option value="5">Sexta-feira</option>
-            <option value="6">Sábado</option>
-        </select>
-    </div>
-    <div class="input-block">
-        <label for="time">Hora</label>
-        <input name="time" id="time" type="time" >
-    </div>
-    <button type="submit">Filtrar</button>
-</form>
-        </div>
+      <div class="top-bar-container">
+        <a href="/">
+          <img src="images/icons/back.svg" alt="Voltar">
+        </a>
+        <img src="images/logo.svg" alt="">
+      </div>
 
-      </header>
-      <main>
+      <div class="header-content">
+        <strong>Esses são os proffys disponíveis.</strong>
+        <form id="search-teachers">
+
+          <div class="select-block">
+            <label for="subject">Matéria</label>
+            <select name="subject" id="subject">
+              <option value="" disabled="" hidden="">Selecione uma opção</option>
+
+              {% for subject in subjects %}
+                <option value="{{loop.index}}" {{ "selected" if filters.subject == loop.index }} >
+                  {{ subject }}
+                </option>
+              {% endfor %}
+
+            </select>
+          </div>
+
+          <div class="select-block">
+            <label for="weekday">Dia da semana</label>
+            <select name="weekday" id="weekday">
+              <option value="" disabled="" hidden="">Selecione uma opção</option>
+
+              {% for weekday in weekdays %}
+                <option value="{{  loop.index0 }}" {{ "selected" if filters.weekday == loop.index0 }}>
+                  {{ weekday }}
+                </option>
+              {% endfor %}
+
+            </select>
+          </div>
+
+          <div class="input-block">
+            <label for="time">Hora</label>
+            <input name="time" id="time" type="time" value="{{ filters.time }}">
+          </div>
+
+          <button type="submit">Filtrar</button>
+
+        </form>
+      </div>
+
+    </header>
+
+    <main>
+
+      {% if proffys == "" %}
+        <p class="no-results">Nenhum professor encontrado com a sua pesquisa</p>
+      {% else %}
+
+        {% for proffy in proffys %}
         <article class="teacher-item">
+          
           <header>
-              <img 
-                  src="https://avatars2.githubusercontent.com/u/58611147?s=400&u=4d185425039c1f36102692b8b97565ea1002d9fb&v=4" 
-                  alt="Jose Guerra">
-              <div>
-                  <strong>Jose Guerra</strong>
-                  <span>Química</span>
-              </div>
-          </header>
-      
-          <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
-      
-          <footer>
-              <p>Preço/hora<strong>R$ 20,00</strong>
-              </p>
-              <button type="button">
-                  <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-              </button>
-          </footer>
-      </article>
-      <article class="teacher-item">
-        <header>
-            <img 
-                src="https://avatars2.githubusercontent.com/u/58611147?s=400&u=4d185425039c1f36102692b8b97565ea1002d9fb&v=4" 
-                alt="Jose Guerra">
+            <img src="{{ proffy.avatar }}" alt="{{ proffy.name }}">
             <div>
-                <strong>Jose Guerra</strong>
-                <span>Química</span>
+              <strong>{{ proffy.name }}</strong>
+              <span>{{ proffy.subject }}</span>
             </div>
-        </header>
-    
-        <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
-    
-        <footer>
-            <p>Preço/hora<strong>R$ 20,00</strong>
-            </p>
-            <button type="button">
-                <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-            </button>
-        </footer>
-    </article>
-      </main>
-  
-    </div>
-  
-  </body>
-  
-  </html>
+          </header>
+
+          <p>{{ proffy.bio }}</p>
+
+          <footer>
+            <p>Preço/hora<strong>{{ proffy.cost }}</strong></p>
+            
+            <a href="https://api.whatsapp.com/send?l=pt_BR&phone=55{{ proffy.whatsapp }} &text=Tenho interesse na sua aula de {{ proffy.subject }} {{ proffy.name }}" class="button" target="_blank">
+              <img src="/images/icons/whatsapp.svg" alt="WhatsApp">
+              Entrar em contato
+            </a>
+          </footer>
+
+        </article>
+        {%endfor%}
+
+      {% endif %}
+
+      
+
+    </main>
+  </div>
+
+</body>
+
+</html>
